# ml-model-benchmark-suite

./: CHANGELOG.md  README.md  main.py  pyproject.toml  report_run_1.html  requirements.txt  setup.py
benchmark/: __init__.py  base.py  batch.py  compare.py  config.py  cv.py  data.py  export.py  importance.py  metrics.py  overfitting.py  plots.py  preprocessing.py  registry.py  report.py  runner.py  shap_analysis.py  tracking.py  tuning.py  utils.py
benchmark/models/: __init__.py  classification.py  lightgbm_wrapper.py  regression.py
benchmark/templates/: compare.html  report.html
config/: airline_2015_full.yaml  airline_2015_regression.yaml  airline_2015_september_classification.yaml  airline_2015_september_kfold.yaml  airline_2015_september_minmax.yaml  airline_2015_september_noscale.yaml  airline_2015_september_regression.yaml  airline_2015_september_shap.yaml  airline_2015_september_tuning.yaml  airline_2015_tuning.yaml  airline_2016.yaml  bank.yaml  example.yaml  tuning_test.yaml
datasets/: prepare_datasets.py  synthetic_mixed.csv
examples/: end_to_end.py
exports/: all_runs.csv  all_runs.json  run_1.csv  run_1.json
notebooks/: tutorial.ipynb
reports/: bank_report.html  bank_report_36.html  bank_report_37.html  bank_report_38.html  compare_7_vs_8.html  tags_test_report.html  tuning_test_report.html
reports/batch_reports/: report_run_2.html  report_run_3.html
tests/: __init__.py  test_cv.py  test_data.py  test_integration.py  test_metrics.py  test_models_classification.py  test_models_lightgbm.py  test_models_regression.py  test_preprocessing.py  test_report.py  test_tuning.py
