[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-model-benchmark-suite"
version = "0.1.0"
description = "Structured framework for training, evaluating, and comparing ML models"
authors = [{name = "DigitalNomad"}]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.3.0",
    "xgboost>=1.7.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "shap>=0.42.0",
    "openml>=0.13.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
ml-benchmark = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=5.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | venv
  | build
  | dist
  | notebooks
  | datasets
  | reports
  | exports
  | benchmark/templates
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
